--- a/app/views/docs/functions-runtimes.phtml
+++ b/app/views/docs/functions-runtimes.phtml
@@ -29,7 +29,7 @@ $sorted_runtimes['Dart']["cloud"] = true;
 
 <p>
     Appwrite Functions supports an extensive list of runtimes to meet your unique tech preferences.
-    Not all runtimes are available on Appwrite Cloud, check for the <span class="tag green">Cloud</span> label in each listed runtime to know which ones are available.
+    Not all runtimes are available on Appwrite Cloud yet. Check for the <span class="tag green">Cloud</span> label in each listed runtime to know which ones are available.
 </p>
 
 <h2><a href="/docs/functions#supportedRuntimes" id="supportedRuntimes">Supported Runtimes</a></h2>
