--- a/app/views/docs/functions-execute.phtml
+++ b/app/views/docs/functions-execute.phtml
@@ -47,7 +47,7 @@ use Appwrite\Utopia\View;
 </p>
 
 <p>
-<a href="/docs/sdk/functions"><i class="icon-angle-circled-right"></i>Learn more about using the Appwrite SDKs</a>
+<a href="/docs/sdks"><i class="icon-angle-circled-right"></i>Learn more about using the Appwrite SDKs</a>
 </p>
 
 <h3>Client SDKs</h3>
