--- a/app/views/docs/functions-runtimes.phtml
+++ b/app/views/docs/functions-runtimes.phtml
@@ -4,6 +4,12 @@ use Appwrite\Utopia\View;
 
 $events = $this->getParam('events', []);
 $runtimes = $this->getParam('runtimes', []);
+$runtimes['node-16.0']["cloud"] = true;
+$runtimes['node-18.0']["cloud"] = true;
+$runtimes['php-8.0']["cloud"] = true;
+$runtimes['ruby-3.0']["cloud"] = true;
+$runtimes['python-3.9']["cloud"] = true;
+$runtimes['dart-2.17']["cloud"] = true;
 
 $sorted_runtimes = [];
 
@@ -18,12 +24,6 @@ foreach ($runtimes as $key => $item) {
 
     $sorted_runtimes[$name]['versions'][] = $item;
 }
-
-$sorted_runtimes['Node.js']["cloud"] = true;
-$sorted_runtimes['PHP']["cloud"] = true;
-$sorted_runtimes['Ruby']["cloud"] = true;
-$sorted_runtimes['Python']["cloud"] = true;
-$sorted_runtimes['Dart']["cloud"] = true;
 ?>
 
 
@@ -41,9 +41,9 @@ $sorted_runtimes['Dart']["cloud"] = true;
         <tr>
             <th style="width: 50px"></th>
             <th style="width: 80px">Name</th>
+            <th style="width: 140px">version</th>
             <th>Image</th>
             <th  style="width: 100px">Architectures</th>
-            <th  style="width: 140px">Platforms</th>
         </tr>
     </thead>
     <tbody>
@@ -53,7 +53,15 @@ $sorted_runtimes['Dart']["cloud"] = true;
                 <img src="" data-ls-attrs="src=/images/runtimes/<?php echo $this->escape($runtime['versions'][0]['logo'] ?? ''); ?>" alt="Function Env." class="avatar xxs" />
             </td>
             <td>
-                <?php echo $this->escape($key); ?>
+                <span data-general-copy><?php echo $this->escape($key); ?> </span>
+            </td>
+            <td>
+                <td>
+                    <span class="tag">Self-hosted</span>         
+                    <?php if (isset($runtime["cloud"])): ?>
+                        <span class="tag green">Cloud</span>
+                    <?php endif; ?>  
+                </td>
             </td>
             <td>
             <?php foreach($runtime['versions'] as $key => $version): ?>
@@ -61,12 +69,6 @@ $sorted_runtimes['Dart']["cloud"] = true;
             <?php endforeach; ?>
             </td>
             <td><?php echo $this->escape(implode(' / ', $runtime['versions'][0]['supports'] ?? [])); ?></td>
-            <td>
-                <span class="tag">Self-hosted</span>         
-                <?php if (isset($runtime["cloud"])): ?>
-                    <span class="tag green">Cloud</span>
-                <?php endif; ?>  
-            </td>
         </tr>
         <?php endforeach; ?>
     </tbody>
