--- a/app/views/docs/functions-runtimes.phtml
+++ b/app/views/docs/functions-runtimes.phtml
@@ -40,10 +40,11 @@ foreach ($runtimes as $key => $item) {
     <thead>
         <tr>
             <th style="width: 50px"></th>
-            <th style="width: 80px">Name</th>
-            <th style="width: 140px">version</th>
+            <th style="width: 70px">Name</th>
+            <th style="width: 100px">Version</th>
+            <th style="width: 60px"></th>
             <th>Image</th>
-            <th  style="width: 100px">Architectures</th>
+            <th  style="width: 80px">Architectures</th>
         </tr>
     </thead>
     <tbody>
@@ -53,16 +54,20 @@ foreach ($runtimes as $key => $item) {
                 <img src="" data-ls-attrs="src=/images/runtimes/<?php echo $this->escape($runtime['versions'][0]['logo'] ?? ''); ?>" alt="Function Env." class="avatar xxs" />
             </td>
             <td>
-                <span data-general-copy><?php echo $this->escape($key); ?> </span>
+                <?php echo $this->escape($key); ?>
             </td>
             <td>
-                <td>
-                    <span class="tag">Self-hosted</span>         
-                    <?php if (isset($runtime["cloud"])): ?>
-                        <span class="tag green">Cloud</span>
-                    <?php endif; ?>  
-                </td>
+            <?php foreach($runtime['versions'] as $key => $version): ?>
+                <span data-general-copy><?php echo $this->escape($version['version']); ?> </span> <br>
+            <?php endforeach; ?> 
             </td>
+            <td>
+            <?php foreach($runtime['versions'] as $key => $version): ?>
+                <?php if (isset($version["cloud"])): ?>
+                    <span class="tag green">Cloud</span>
+                <?php endif; ?> 
+            <?php endforeach; ?> 
+            </td>   
             <td>
             <?php foreach($runtime['versions'] as $key => $version): ?>
                 <a href="https://hub.docker.com/r/<?php echo $this->escape(strtok($version['image'], ':')); ?>" target="_blank" rel="noopener"><?php echo $this->escape($version['image'] ?? ''); ?> <i class="icon-link-ext"></i></a>
