Address Eldad's comments

--- a/app/views/docs/functions-deploy.phtml
+++ b/app/views/docs/functions-deploy.phtml
@@ -69,7 +69,7 @@
 </ol>
 
 <h2><a href="#cli" id="cli">CLI</a></h2>
-<div class="notice">
+<div class="notice margin-bottom-small">
   <h2>CLI Setup</h2>
   <p>Before you can deploy with the Appwrite CLI, make sure you've <a href="docs/command-line">installed and initialized</a> the CLI.</p>
 </div>
