--- a/app/views/docs/functions-examples.phtml
+++ b/app/views/docs/functions-examples.phtml
@@ -4,7 +4,7 @@
   Take a look at the following.
 </p>
 
-<h2>Currency Conversion API</h2>
+<h2><a href="#currency" id="currency">Currency Conversion API</a></h2>
 
 <p>
   Here's a currency conversion API that converts from Euros and Indian Rupees to US Dollars. We'll use an external API to get the latest exchange rates, and query it using an dependency specific to each runtime.
@@ -233,7 +233,7 @@ end</code></pre>
 </p>
 
 
-<h2>Voting System Using Appwrite</h2>
+<h2><a href="#voting" id="voting">Voting System Using Appwrite</a></h2>
 <p>
   Here's a simple voting system that allows users to vote on various topics. Appwrite Functions and the server SDK are used to enforce voting rules and prevent multiple votes from the same user for a single topic.
 </p>
@@ -611,10 +611,9 @@ def main(context):
   For example, <code>[YOUR_FUNCTION_URL]/?userId=[USER_ID]&amp;topicId=[TOPIC_ID]&amp;vote=yes</code> to cast a vote.
 </p>
 
-<h3>HTML Contact Form</h3>
-
+<h2><a href="#form-submission" id="orm-submission">HTML Contact Form</a></h2>
 <p>
-  Here's a simple form page that can be used to store a user's message in a collection.
+  Here's a simple form page that handles form submissions, and can be used to store a user's message in a collection.
   The form is submitted to the function using the <code>POST</code> method and the form data is sent as a URL-encoded string in the request body.
 </p>
 
