--- a/app/views/docs/migrations.phtml
+++ b/app/views/docs/migrations.phtml
@@ -8,7 +8,7 @@
 <h2><a href="#supported-sources" id="supported-sources">Supported sources</a></h2>
 <p>
     You can transfer from these sources to an Appwrite project. 
-    Resources marked <span class="tag green">supported</span> are migrated automatically.
+    Resources marked <span class="tag green">enabled</span> are migrated automatically.
     Resources marked <span class="tag yellow">partial</span> can be migrated, but with limitations or caveats, check the guide for each source to learn more.
     Resources marked <span class="tag">manual</span> require manual migration.
 </p>
@@ -29,51 +29,51 @@
             <td>
                 <p><a href="/docs/migrations-firebase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Firebase</a></p>
             </td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
             <td><span class="tag yellow">partial</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
             <td><span class="tag">manual</span></td>
         </tr>
         <tr>
             <td>
                 <p><a href="/docs/migrations-supabase"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Supabase</a></p>
             </td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
             <td><span class="tag yellow">partial</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
             <td><span class="tag">manual</span></td>
         </tr> 
         <tr>
             <td>
                 <p><a href="/docs/migrations-nhost"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> NHost</a></p>
             </td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
             <td><span class="tag yellow">partial</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
             <td><span class="tag">manual</span></td>
         </tr>   
         <tr>
             <td>
                 <p><a href="/docs/migrations-cloud-to-self-hosted"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Cloud to Self-hosted</a></p>
             </td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
         </tr>   
         <tr>
             <td>
                 <p><a href="/docs/migrations-self-hosted-to-cloud"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Self-hosted to Cloud</a></p>
             </td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
-            <td><span class="tag green">supported</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
+            <td><span class="tag green">enabled</span></td>
         </tr>         
     </tbody>
 </table>
