Apply suggestions from code review
Co-authored-by: Matej Bačo <matejbaco2000@gmail.com>

--- a/app/views/docs/authentication-oauth.phtml
+++ b/app/views/docs/authentication-oauth.phtml
@@ -284,7 +284,7 @@ print(session.providerAccessToken);</code></pre>
 
 <h2><a href="#refresh" id="refresh">Refresh Tokens</a></h2>
 <p>
-    OAuth 2 sessions expire to protect from security risks. 
+    OAuth 2 access tokens expire to protect from security risks. 
     OAuth 2 sessions should be periodically refreshed to keep the user authenticated. 
     You can do this by calling the <a href="/docs/client/account#accountUpdateSession">Update OAuth Session</a> endpoint when ever your user visits your app.
 </p>
