--- a/app/views/docs/authentication-security.phtml
+++ b/app/views/docs/authentication-security.phtml
@@ -102,4 +102,4 @@
     Encourage passwords that are hard to guess by disallowing users to pick passwords that contain personal data. 
     Personal data includes the user's name, email, and phone number.
 </p>
-<p>Disallowing personal data can be enabled in the Auth service's <b>Security</b> tab on the Appwrite console.</p>
+<p>Disallowing personal data can be enabled in the Auth service's <b>Security</b> tab on the Appwrite Console.</p>
